# Flashbook

./: .gitignore  README.md  requirements.txt
dashboard/: index.html  main.js
market_simulator/: agent.py  api_client.py  config.py  listeners.py  simulator.py  state.py  strategies.py  tasks.py  utils.py
python_services/: requirements.txt
python_services/app/: main.py  models.py  routes.py  ws_manager.py
python_services/env/: pyvenv.cfg
python_services/env/Scripts/: activate  activate.bat
rust_matching_engine/: Cargo.toml
rust_matching_engine/src/: lib.rs
tests/: test_api.py
